# OmniMedAI

./: .gitignore  README.md  README_zh.md  model_performance_analysis.py  pyproject.toml  radiomics_2d_train.py  radiomics_3d_train.py  radiomics_feature_extract.py  requirements-analysis.txt
.github/workflows/: tests.yml
docs/: actual_data_workflow.md  in2.html  index.html  reviewer_revision_plan.md  revision_implementation_status.md
docs/templates/: bulk_expression_schema.csv  data_code_availability_template.md  image_pair_manifest.csv  manuscript_revision_checklist.md  model_input_schema.csv  omics_accession_schema.csv  omics_sample_metadata_schema.csv  pathology_tsr_schema.csv  radiomics_repeat_schema.csv  reviewer_response_matrix.csv  revision_workflow_config.json  single_cell_metadata_schema.csv  survival_input_schema.csv  treatment_input_schema.csv
omnimedai/: __init__.py  test_metadata.py
onem_eval/: README.md  __init__.py  advanced.py  evaluation.py  reporting.py  survival.py  test_advanced.py  test_clinical_workflows.py  treatment.py
onem_eval/config/: __init__.py  settings.py
onem_fusion/: README.md  __init__.py  fusion.py
onem_fusion/config/: __init__.py  settings.py
onem_habitat/: README.md  README_EN.md  __init__.py  example_usage.py  test_basic.py
onem_habitat/clustering/: __init__.py  feature_clustering.py
onem_habitat/config/: __init__.py  settings.py
onem_habitat/radiomics/: __init__.py  local_extractor.py
onem_habitat/segmentation/: __init__.py  mask_refiner.py
onem_habitat/utils/: __init__.py  habitat_utils.py  radiomics_utils.py
onem_modeling/: README.md  __init__.py  cross_validation.py  explain.py  feature_selection.py  modeling.py  test_cross_validation.py  test_feature_selection.py  test_validation.py  validation.py
onem_modeling/config/: __init__.py  settings.py
onem_omics/: __init__.py  analysis.py  test_analysis.py
onem_path/: README.md  README_EN.md  __init__.py  example_usage.py  test_basic.py  test_tsr.py  tsr.py
onem_path/config/: __init__.py  settings.py
onem_process/: README.md  README_EN.md  __init__.py  example_usage.py  test_basic.py  test_clinical_validation.py  test_image_quality.py  test_reconstruction.py
onem_radiomics/: README.md  README_EN.md  __init__.py  example_usage.py  harmonization.py  test_basic.py  test_harmonization.py
onem_segment/: README.md  README_EN.md  __init__.py  example_usage.py  test_basic.py  test_validation.py  validation.py
onem_start/: 00_Quick_Start_Tutorial.ipynb  01_Radiomics_Feature_Extraction.ipynb  02_ROI_Segmentation.ipynb  03_Pathology_Analysis.ipynb  04_Comprehensive_Workflow.ipynb  README.md  __init__.py  revision_analysis.py  test_revision_analysis.py
onem_torch/: __init__.py
(+72 files in other folders)
